apply some configs

--- a/Week6/package.json
+++ b/Week6/package.json
@@ -20,5 +20,8 @@
     },
     "scripts": {
         "wdio": "wdio run wdio.conf.js"
+    },
+    "dependencies": {
+        "allure-commandline": "^2.18.1"
     }
 }
